# splatt

cmake/: lapack.cmake  types.cmake
include/: CMakeLists.txt
lib/: CMakeLists.txt
